package com.flipkart.protobuf.ext.generator.test.sample;

import java.util.List;
import java.util.Map;

public abstract class AbstractBaseClass {
	private String baseAttribute;
	double double1;
	float float1;
	int int1;
	long long1;
	boolean boolean1;
	String[] string1;
	List<Integer> integerList;
	private Map<String, Integer> stringToIntMap;
	private SampleEnumType enumType;

}
